--- a/foundry.toml
+++ b/foundry.toml
@@ -8,6 +8,12 @@ optimizer-runs = 10_000
 verbosity = 3
 evm_version = "cancun"
 
+ignored_warnings_from = ["lib", "test", "script"]
+
+no_match_coverage = "script|test"
+
 [fmt]
 bracket_spacing = true
 line_length = 120
+single_line_statement_block = "single"
+multiline_func_header = "params_first_multi"
