--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "lib/common"]
 	path = lib/common
 	url = git@github.com:m0-foundation/common.git
+[submodule "lib/openzeppelin"]
+	path = lib/openzeppelin
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts.git
+	branch = release-v5.3
