test: add disableEarning tests

--- a/foundry.toml
+++ b/foundry.toml
@@ -17,3 +17,9 @@ bracket_spacing = true
 line_length = 130
 single_line_statement_block = "single"
 multiline_func_header = "params_first_multi"
+
+[rpc_endpoints]
+ethereum = "${ETHEREUM_RPC}"
+hyperevm = "${HYPEREVM_RPC}"
+sepolia = "${SEPOLIA_RPC}"
+hyperevm_testnet = "${HYPEREVM_TESTNET_RPC}"
