--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 [submodule "lib/protocol"]
 	path = lib/protocol
 	url = git@github.com:m0-foundation/protocol.git
-	branch = spoke
+	branch = spoke-upgradeable
 [submodule "lib/ttg"]
 	path = lib/ttg
 	url = git@github.com:m0-foundation/ttg.git
