script: deploy scripts and artifacts (#20)
* fix: [M-01] Undercounted bridgedPrincipal due to rounding

* test: InsufficientBalance transfer test

* test: add disableEarning tests

* script: deploy

* chore: add protocol submodule

* chore: add ttg submodule

* script: configure

* script: fix deploy

* script: transfer and send M token index scripts

* script: make commands

* script: forge logs

* chore: switch to spoke-upgradeable

* script: update deploy scripts, add transfer and values propagation

* chore: update protocol submodule

* script: add transfer m like token

* script: deploy HubPortal on Ethereum

* script: deploy M, Registrar, and Spoke Portal on HyperEVM

* script: configure

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ out/
 /broadcast/Upgrade*/31337/
 /broadcast/Upgrade*/*/dry-run
 
-
 # Coverage files
 coverage/
 lcov.info
@@ -30,6 +29,9 @@ docs/
 
 # Mac OS files
 .DS_Store
+
+# VS Code
+.vscode
 
 # NPM modules
 node_modules
