script: deploy to Plume Testnet

--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,11 @@ export HYPEREVM_RPC=
 # Testnet RPC URLs
 export SEPOLIA_RPC=
 export HYPEREVM_TESTNET_RPC=
+export PLUME_TESTNET_RPC=
 
 # Used for verifying contracts on Etherscan
 export ETHERSCAN_API_KEY=
 
 export PRIVATE_KEY=
+
+export MIGRATION_ADMIN=
