chore: add WrappedM submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,7 @@
 	path = lib/ttg
 	url = git@github.com:m0-foundation/ttg.git
 	branch = spoke
+[submodule "lib/wrapped-m-token"]
+	path = lib/wrapped-m-token
+	url = git@github.com:m0-foundation/wrapped-m-token.git
+	branch = spoke
