script: deploy Spoke Wrapped M

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ export ETHERSCAN_API_KEY=
 export PRIVATE_KEY=
 
 export MIGRATION_ADMIN=
+export HUB_VAULT=
+export HUB_CHAIN_ID=
+
+# Block Explorers
+export HYPEREVM_EXPLORER=https://www.hyperscan.com/api/
+export PLUME_TESTNET_EXPLORER=https://testnet-explorer.plume.org/api/
